Fix bug where project title and links were not aligned in IE

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,9 @@ body {
 .project_header {
 	-webkit-margin-before:0em;
 	-webkit-margin-after:0em;
-	padding-bottom: 40px;
-	padding-left: 15px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	line-height: 1.0;
 }
 
 
@@ -42,11 +43,6 @@ body {
 	margin-left: 10px;
 	margin-top: 0px;
 }
-
-.project_links {
-
-}
-
 
 .project_link {
 	float: right;
@@ -103,7 +99,6 @@ h2 {
 
 h3 {
 	font-size:19px;
-	float: left;
 	-webkit-margin-before:0em;
 	-webkit-margin-after:0em;
 }
